<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/AdminView">
	<TableRow style="@style/AdminView_Row">
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_password1" style="@style/AdminView_Caption" />
		<EditText android:id="@+id/password1" style="@style/AdminView_Widget" android:inputType="textPassword" android:hint="@string/hint_password_new" />
	</TableRow>
	<TableRow style="@style/AdminView_Row">
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_password2" style="@style/AdminView_Caption" />
		<EditText android:id="@+id/password2" style="@style/AdminView_Widget" android:inputType="textPassword" android:hint="@string/hint_password_new" />
	</TableRow>
</TableLayout>
